<resources>
    <string name="app_name">bluematrix</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_to_continue_to_your_video_downloader">Sign in to continue to your video downloader</string>
    <string name="welcome_back">Welcome Back</string>
</resources>